feat: split event category tables
