# hangsha/src/main/kotlin/com/team1/hangsha/category/dto/ListCategoryItemsResponse.kt
@@ -1,0 +1,5 @@
+package com.team1.hangsha.category.dto
+
+import com.team1.hangsha.category.dto.core.CategoryItemDto
+
+data class ListCategoryItemsResponse(val items: List<CategoryItemDto>)
